--- a/template.html
+++ b/template.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <p>Calendar rendered {{renderdate}}. <a href='#today'>Go to today</a></p>
-
+<table>
+  <tr>
 {{calendar}}
-
+</tr>
+</table>
 </body>
 </html>
-
