--- a/template.html
+++ b/template.html
@@ -3,13 +3,15 @@
 <title>Calendar</title>
 <link rel="stylesheet" type="text/css" href="style_calendar.css" />
 <meta http-equiv="Refresh" content="10800" />
+<link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 </head>
 <body>
 <p>Calendar rendered {{renderdate}}. <a href='#today'>Go to today</a></p>
+
 <table>
   <tr>
-{{calendar}}
-</tr>
+    {{calendar}}
+  </tr>
 </table>
 </body>
 </html>
